--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,127 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %} {% block content %}
+<main>
+    <div class="container">
 
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta content="minimum-scale=1.0, width=device-width, maximum-scale=0.6667, user-scalable=no" name="viewport" />
+        <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-    <title>Pool Control</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+                        <div class="d-flex justify-content-center py-4">
+                            <a href="index.html" class="logo d-flex align-items-center w-auto">
+                                <img src="../static/favicon.ico" alt="">
+                                <span class="d-none d-lg-block">Pool Controller</span>
+                            </a>
+                        </div>
+                        <!-- End Logo -->
 
-    <!-- Favicons -->
-    <link rel="icon" href="../static/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="../static/apple-touch-icon.png">
+                        <div class="card mb-3">
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+                            <div class="card-body">
 
-    <!-- Vendor CSS Files -->
-    <link href="../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="../static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="../static/assets/vendor/quill/quill.snow.css" rel="stylesheet">
-    <link href="../static/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-    <link href="../static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="../static/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+                                <div class="pt-4 pb-2">
+                                    <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
+                                    <p class="text-center small">Enter your username & password to login</p>
+                                </div>
 
-    <!-- Template Main CSS File -->
-    <link href="../static/assets/css/style.css" rel="stylesheet">
+                                <form class="row g-3 needs-validation" novalidate method="post" action="{{ url_for('login') }}">
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/76d6e95371.js" crossorigin="anonymous"></script>
-
-</head>
-
-<body>
-
-    <main>
-        <div class="container">
-
-            <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-
-                            <div class="d-flex justify-content-center py-4">
-                                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                                    <img src="../static/favicon.ico" alt="">
-                                    <span class="d-none d-lg-block">Pool Controller</span>
-                                </a>
-                            </div>
-                            <!-- End Logo -->
-
-                            <div class="card mb-3">
-
-                                <div class="card-body">
-
-                                    <div class="pt-4 pb-2">
-                                        <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                                        <p class="text-center small">Enter your username & password to login</p>
+                                    <div class="col-12">
+                                        <label for="yourUsername" class="form-label">Username</label>
+                                        <div class="input-group has-validation">
+                                            <span class="input-group-text" id="inputGroupPrepend">@</span>
+                                            <input type="text" name="username" class="form-control" id="yourUsername" required value="{{uname}}">
+                                            <div class="invalid-feedback">Please enter your username.</div>
+                                        </div>
                                     </div>
 
-                                    <form class="row g-3 needs-validation" novalidate method="post" action="login">
+                                    <div class="col-12">
+                                        <label for="yourPassword" class="form-label">Password</label>
+                                        <input type="password" name="password" class="form-control" id="yourPassword" required>
+                                        <div class="invalid-feedback">Please enter your password!</div>
+                                    </div>
 
-                                        <div class="col-12">
-                                            <label for="yourUsername" class="form-label">Username</label>
-                                            <div class="input-group has-validation">
-                                                <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                                <input type="text" name="username" class="form-control" id="yourUsername" required>
-                                                <div class="invalid-feedback">Please enter your username.</div>
-                                            </div>
+                                    <div class="col-12">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe" {% if remember %}checked{% endif %}>
+                                            <label class="form-check-label" for="rememberMe">Remember me</label>
                                         </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <button class="btn btn-primary w-100" type="submit">Login</button>
+                                    </div>
+                                </form>
 
-                                        <div class="col-12">
-                                            <label for="yourPassword" class="form-label">Password</label>
-                                            <input type="password" name="password" class="form-control" id="yourPassword" required>
-                                            <div class="invalid-feedback">Please enter your password!</div>
-                                        </div>
-
-                                        <div class="col-12">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                                                <label class="form-check-label" for="rememberMe">Remember me</label>
-                                            </div>
-                                        </div>
-                                        <div class="col-12">
-                                            <button class="btn btn-primary w-100" type="submit">Login</button>
-                                        </div>
-                                    </form>
-
-                                </div>
                             </div>
-
                         </div>
+
                     </div>
                 </div>
+            </div>
 
-            </section>
+        </section>
 
-        </div>
-    </main>
-    <!-- End #main -->
-
-
-    <!-- Vendor JS Files -->
-    <script src="../static/assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../static/assets/vendor/chart.js/chart.umd.js"></script>
-    <script src="../static/assets/vendor/echarts/echarts.min.js"></script>
-    <script src="../static/assets/vendor/quill/quill.min.js"></script>
-    <script src="../static/assets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="../static/assets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="../static/assets/vendor/php-email-form/validate.js"></script>
-
-    <!-- Include jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Template Main JS File -->
-    <script src="../static/assets/js/main.js"></script>
-
-</body>
-
-</html>
+    </div>
+</main>
+{% endblock %}
